<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brickpi3_charlie</name>
  <version>0.0.0</version>
  <description>Charlie is a simple demonstration robot for package brickpi3_motors</description>
  <maintainer email="julian.w.francis@gmail.com">julian</maintainer>
  <license>MIT</license>
  <exec_depend>brickpi3_motors</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
